--- a/index.html
+++ b/index.html
@@ -21,13 +21,12 @@
 
   <div class="login-container" id="login-container">
     <div class="login-card">
-      <h1>💖 Ingresa a Nuestro Mundo 💖</h1>
-      <p class="login-subtitle">Un lugar especial para nosotros</p>
+      <h1>💖 Ingresa (tu user es "vocalista" jakja) 💖</h1>
       <div class="input-group">
         <input type="text" id="username" placeholder="Usuario" />
         <input type="password" id="password" placeholder="Contraseña" />
       </div>
-      <button onclick="login()" class="login-btn">Entrar al Amor</button>
+      <button onclick="login()" class="login-btn">Hagale Con confianza</button>
       <p id="error-message"></p>
     </div>
   </div>
@@ -69,7 +68,7 @@
     <!-- Photo Section -->
     <section class="photo-section">
       <div class="image-container">
-        <img src="/placeholder.svg?height=400&width=400" alt="Nuestra Foto" id="photo" />
+        <img src="/beso.jpg" alt="Nuestra Foto" id="photo" />
         <div class="photo-overlay">
           <p>Haz clic para ver mensajes especiales 💕</p>
         </div>
@@ -88,17 +87,6 @@
       </div>
     </section>
 
-    <!-- Surprise Section -->
-    <section class="surprise-section">
-      <button onclick="showSurprise()" class="surprise-btn" id="surprise-btn">
-        ✨ Una Sorpresa Especial ✨
-      </button>
-      <div id="surprise-content" class="surprise-content hidden">
-        <h3>🎵 Nuestra Canción del Corazón 🎵</h3>
-        <p>Cada vez que escucho música, pienso en ti. Eres la melodía que nunca quiero que termine.</p>
-        <div class="music-notes">♪ ♫ ♪ ♫ ♪</div>
-      </div>
-    </section>
   </div>
 
   <script src="script.js"></script>
