--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
           <div class="timeline-content">
             <h3>Primer Encuentro</h3>
             <p>Cuando nuestros corazones se conectaron por primera vez</p>
+            <img src="img/primer_encuentro.jpg" alt="Primer Encuentro" class="timeline-photo">
           </div>
         </div>
         <div class="timeline-item">
@@ -53,6 +54,7 @@
           <div class="timeline-content">
             <h3>Primera Canción</h3>
             <p>Tu voz se convirtió en mi melodía favorita</p>
+            <img src="img/primera_cancion.jpg" alt="Primera Canción" class="timeline-photo">
           </div>
         </div>
         <div class="timeline-item">
@@ -60,6 +62,7 @@
           <div class="timeline-content">
             <h3>Un Mes de Amor</h3>
             <p>Hoy celebramos este hermoso comienzo</p>
+            <img src="img/valeyyo.jpg" alt="Un Mes de Amor" class="timeline-photo">
           </div>
         </div>
       </div>
@@ -68,7 +71,7 @@
     <!-- Photo Section -->
     <section class="photo-section">
       <div class="image-container">
-        <img src="/beso.jpg" alt="Nuestra Foto" id="photo" />
+        <img src="img/beso.jpg" alt="Nuestra Foto" id="photo" />
         <div class="photo-overlay">
           <p>Haz clic para ver mensajes especiales 💕</p>
         </div>
@@ -83,7 +86,7 @@
         <p>Mi querida vocalista,</p>
         <p>Este primer mes contigo ha sido como una canción perfecta. Cada día descubro una nueva nota en tu sonrisa, una nueva melodía en tu risa. Eres mi inspiración, mi musa, mi corazón.</p>
         <p>Gracias por llenar mi mundo de música y amor.</p>
-        <p class="signature">Con todo mi amor,<br>Tu admirador eterno 💖</p>
+        <p class="signature">Con todo mi amor,<br>El tipito que preguntó si ya tocaba mudarse</p>
       </div>
     </section>
 
