--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   <div class="main-container hidden" id="main-container">
     <header class="romantic-header">
-      <h1>Para ti, mi vocalista 💕</h1>
+      <h1>Para ti, ratita de skinner 💕</h1>
       <p class="subtitle">Celebrando nuestro primer mes juntos</p>
     </header>
 
@@ -46,15 +46,15 @@
           <div class="timeline-content">
             <h3>Primer Encuentro</h3>
             <p>Cuando nuestros corazones se conectaron por primera vez</p>
-            <img src="img/primer_encuentro.jpg" alt="Primer Encuentro" class="timeline-photo">
+            <img src="img/mona.jpg" alt="Primer Encuentro" class="timeline-photo">
           </div>
         </div>
         <div class="timeline-item">
           <div class="timeline-dot"></div>
           <div class="timeline-content">
             <h3>Primera Canción</h3>
-            <p>Tu voz se convirtió en mi melodía favorita</p>
-            <img src="img/primera_cancion.jpg" alt="Primera Canción" class="timeline-photo">
+            <p>Es que...tu voz</p>
+            <img src="img/flaca.jpeg" alt="Primera Canción" class="timeline-photo">
           </div>
         </div>
         <div class="timeline-item">
@@ -83,7 +83,9 @@
     <section class="love-letter">
       <div class="letter-content">
         <h2>Mi Carta de Amor</h2>
-        <p>Mi querida vocalista,</p>
+        <p>Hola Vale,</p>
+        <p>No te envié un párrafo de primer mes</p>
+        <p>Te hice una paginita web ajakj</p>
         <p>Este primer mes contigo ha sido como una canción perfecta. Cada día descubro una nueva nota en tu sonrisa, una nueva melodía en tu risa. Eres mi inspiración, mi musa, mi corazón.</p>
         <p>Gracias por llenar mi mundo de música y amor.</p>
         <p class="signature">Con todo mi amor,<br>El tipito que preguntó si ya tocaba mudarse</p>
